add_library(script
    binding/armor_struct.cpp
    binding/attack_boni.cpp
    binding/binding.hpp
    binding/character.cpp
    binding/character_skillvalue.cpp
    binding/colour.cpp
    binding/item_struct.cpp
    binding/container.cpp
    binding/crafting_dialog.cpp
    binding/field.cpp
    binding/input_dialog.cpp
    binding/item.cpp
    binding/item_look_at.cpp
    binding/long_time_action.cpp
    binding/long_time_character_effects.cpp
    binding/long_time_effect.cpp
    binding/long_time_effect_struct.cpp
    binding/merchant_dialog.cpp
    binding/message_dialog.cpp
    binding/monster.cpp
    binding/monster_armor.cpp
    binding/npc.cpp
    binding/player.cpp
    binding/position.cpp
    binding/random.cpp
    binding/script_item.cpp
    binding/script_variables_table.cpp
    binding/selection_dialog.cpp
    binding/tiles_struct.cpp
    binding/waypoint_list.cpp
    binding/weapon_struct.cpp
    binding/weather_struct.cpp
    binding/world.cpp
    forwarder.cpp
    forwarder.hpp
    LuaDepotScript.cpp
    LuaDepotScript.hpp
    LuaItemScript.cpp
    LuaItemScript.hpp
    LuaLearnScript.cpp
    LuaLearnScript.hpp
    LuaLoginScript.cpp
    LuaLoginScript.hpp
    LuaLogoutScript.cpp
    LuaLogoutScript.hpp
    LuaLongTimeEffectScript.cpp
    LuaLongTimeEffectScript.hpp
    LuaLookAtItemScript.cpp
    LuaLookAtItemScript.hpp
    LuaLookAtPlayerScript.cpp
    LuaLookAtPlayerScript.hpp
    LuaMagicScript.cpp
    LuaMagicScript.hpp
    LuaMonsterScript.cpp
    LuaMonsterScript.hpp
    LuaNPCScript.cpp
    LuaNPCScript.hpp
    LuaPlayerDeathScript.cpp
    LuaPlayerDeathScript.hpp
    LuaQuestScript.cpp
    LuaQuestScript.hpp
    LuaReloadScript.cpp
    LuaReloadScript.hpp
    LuaScheduledScript.cpp
    LuaScheduledScript.hpp
    LuaScript.cpp
    LuaScript.hpp
    LuaTestSupportScript.cpp
    LuaTestSupportScript.hpp
    LuaTileScript.cpp
    LuaTileScript.hpp
    LuaTriggerScript.cpp
    LuaTriggerScript.hpp
    LuaWeaponScript.cpp
    LuaWeaponScript.hpp)

find_package(Lua 5.2 REQUIRED)
include_directories(${LUA_INCLUDE_DIR})
target_link_libraries(script ${LUA_LIBRARIES})
target_link_libraries(script /usr/lib/x86_64-linux-gnu/libluabind.so)
